--- a/build-gcp.gradle
+++ b/build-gcp.gradle
@@ -36,6 +36,7 @@ repositories {
 }
 
 dependencies {
+    compile 'com.google.cloud:google-cloud-datastore:1.101.0'
     providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
     providedCompile group: 'com.google.appengine', name: 'appengine', version: '+'
 }
