--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@
  * limitations under the License.
  */
 apply plugin: 'java'
-apply plugin: 'kotlin'
+//apply plugin: 'kotlin'
 
 apply from: 'build-aws.gradle'
 apply from: 'build-gcp.gradle'
@@ -46,9 +46,9 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
-compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
-compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
+//compileKotlin {
+//    kotlinOptions.jvmTarget = "1.8"
+//}
+//compileTestKotlin {
+//    kotlinOptions.jvmTarget = "1.8"
+//}
