--- a/build.gradle
+++ b/build.gradle
@@ -14,13 +14,13 @@
  * limitations under the License.
  */
 apply plugin: 'java'
-//apply plugin: 'kotlin'
+apply plugin: 'kotlin'
 
 apply from: 'build-aws.gradle'
 apply from: 'build-gcp.gradle'
 
 buildscript {
-    ext.kotlin_version = '1.3.11'
+    ext.kotlin_version = '1.3.72'
 
     repositories {
         mavenCentral()
@@ -41,6 +41,8 @@ dependencies {
 
     compile 'com.sun.mail:javax.mail:1.6.2'
 
+    compile group: 'com.google.actions', name: 'actions-on-google', version: '1.8.0'
+
     compile group: 'com.google.actions', name: 'actions-on-google', version: '1.+'
 
     compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
@@ -48,9 +50,9 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
-//compileKotlin {
-//    kotlinOptions.jvmTarget = "1.8"
-//}
-//compileTestKotlin {
-//    kotlinOptions.jvmTarget = "1.8"
-//}
+compileKotlin {
+    kotlinOptions.jvmTarget = "1.8.0"
+}
+compileTestKotlin {
+    kotlinOptions.jvmTarget = "1.8.0"
+}
